# CmakeConfigTemplate

./: CMakeLists.txt
Bye/: Bye.cpp  Bye.h
Hello/: Hello.cpp  Hello.h
cmake/: WordsConfig.cmake.in
